Fix smooth scroll jumping / overscroll for dynamic sections

--- a/index.css
+++ b/index.css
@@ -48,7 +48,6 @@
 }
 
 html {
-    scroll-behavior: smooth;
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
